--- a/03differentiation/06taylorpolynomials.tex
+++ b/03differentiation/06taylorpolynomials.tex
@@ -63,10 +63,9 @@ Forenkel udtrykket
 
 \end{exercise}
 
-
 \begin{exercise}{Taylor polynomier 2}
 
-Lav et treje ordens Taylor polynomie for $f(x) = \sqrt{x}$
+Lav et tredje ordens Taylor polynomie for $f(x) = \sqrt{x}$
 omkring $x = 4$.
 
 \answerbox{1 + \frac{x - 4}{4} - \frac{(x - 4)^2}{64} + \frac{(x - 4)^3}{512}}
@@ -158,7 +157,6 @@ p_1(x) = 1 + (x + 1)
 
 \end{exercise}
 
-
 \begin{exercise}{Taylor polynomier 4}
 
 Bestem et anden ordens taylor polynomie for $f(x) = x^4 - 7x$
@@ -207,7 +205,6 @@ p_2(x) = 2 + 25 \cdot \left(x - 2\right) + 24 \cdot \left(x - 2\right)^2
 
 
 \end{exercise}
-
 
 \begin{exercise}{Taylor polynomier 5}
 
@@ -266,6 +263,450 @@ p_2(1.1) = 4 + 9 \cdot \left(1.1 - 1\right) + 6 \cdot \left(1.1 - 1\right)^2
  = 4 + 9 \cdot 0.1 + 6 \cdot 0.01 = 4.96
 \]
 
+\end{exercise}
+
+\begin{exercise}{Taylor polynomier 6}
+	
+	Bestem et fjerde ordens taylor polynomie for $f(x) = \cos(x)$
+	omkring $x_0 = \pi$.
+	
+	\answerbox{-1 + \frac{(x-\pi)^2}{2} - \frac{(x-\pi)^4}{24}}
+	
+	\hint
+	Et fjerde ordens Taylor polynomie for en funktion $f(x)$
+	omkring $x_0$ er givet ved
+	\[
+	f(x_0) + \frac{f'(x_0)}{1!} \cdot (x - x_0) 
+	+ \frac{f''(x_0)}{2!} \cdot (x - x_0)^2 
+	+ \frac{f'''(x_0)}{3!} \cdot (x - x_0)^3 
+	+ \frac{f''''(x_0)}{4!} \cdot (x - x_0)^4
+	\]
+	
+	
+	\hint
+	Bestem $f(x_0)$
+	\[
+	f(x_0)  = \cos(\pi) = -1
+	\]
+	
+	\hint
+	Bestem $f'(x)$ og $f'(x_0)$
+	\[
+	f'(x) = -\sin(x) \qquad f'(x_0)= -\sin(\pi) = 0
+	\]
+	
+	\hint
+	Bestem $f''(x)$ og $f''(x_0)$
+	\[
+	f''(x) = -\cos(x) \qquad f''(x_0)  = - \cos(\pi) = 1
+	\]
+	
+	\hint
+	Bestem $f'''(x)$ og $f'''(x_0)$
+	\[
+	f'''(x) = \sin(x) \qquad f'''(x_0) =  \sin(\pi) = 0
+	\]
+	
+	\hint
+	Bestem $f''''(x)$ og $f''''(x_0)$
+	\[
+	f''''(x) = \cos(x) \qquad f''''(x_0) =  \cos(\pi) = -1
+	\]
+	
+	\hint
+	Sæt det hele sammen
+	\[
+	p_4(x) = -1 + \frac{0}{1!} \cdot (x-\pi) + \frac{1}{2!} \cdot (x-\pi)^2 + \frac{0}{3!} \cdot (x-\pi)^3 - \frac{1}{4!} \cdot (x-\pi)^4 	
+	\]
+	
+	\hint
+	Forenkel udtrykket
+	\[
+	p_4(x) = -1 + \frac{(x-\pi)^2}{2} - \frac{(x-\pi)^4}{24}
+	\]
+	
+	
+\end{exercise}
+
+\begin{exercise}{Taylor polynomier 7}
+	
+	Bestem et tredje ordens taylor polynomie for $f(x) =\ln(x)$ 
+	omkring $x_0 = 1$.
+	Benyt taylor polynomiet til at estimere $f(1.1)$.
+	Angiv resultatet med 4 decimaler i boksen herunder.
+	\answerbox{0.0953}
+	
+	\hint
+	Et tredje ordens taylor polynomie 
+	er givet ved
+	\[
+	p_3(x) = f(x_0) + \frac{f'(x_0)}{1!} \cdot (x - x_0)
+	+ \frac{f''(x_0)}{2!} \cdot (x - x_0)^2
+	+ \frac{f'''(x_0)}{3!} \cdot (x - x_0)^3
+	\]
+	
+	
+	\hint
+	Bestem $f(x_0)$
+	\[
+	f(x_0) = \ln(1) = 0
+	\]
+	
+	\hint
+	Bestem $f'(x)$ og $f'(x_0)$
+	\[
+	f'(x) = \frac{1}{x} \qquad f'(x_0) = \frac{1}{1} = 1
+	\]
+	
+	\hint
+	Bestem $f''(x)$ og $f''(x_0)$
+	\[
+	f''(x) =\frac{-1}{x^2}  \quad f''(x_0) = \frac{-1}{1^2} = -1
+	\]
+	
+	\hint
+	Bestem $f'''(x)$ og $f'''(x_0)$
+	\[
+	f'''(x) =\frac{2}{x^3}  \quad f'''(x_0) = \frac{2}{1^3} = 2
+	\]
+	
+	\hint
+	Sæt det hele sammen
+	\[
+	p_3(x) = 0 + \frac{1}{1!} \cdot (x-1) - \frac{1}{2!} \cdot (x-1)^2 + \frac{2}{3!} \cdot (x-1)^3
+	\]
+	
+	\hint
+	Forenkel udtrykket
+	\[
+	p_3(x) = (x-1) - \frac{(x-1)^2}{2} + \frac{(x-1)^3}{3}
+	\]
+	
+	\hint
+	Estimer $f(1.1)$ vha. taylor polynomiet, ved at indsætte i $p_3(x)$.
+	Evaluer $p_3(1.1)$.
+	
+	\hint
+	\[
+	p_3(1.1) = (1.1 - 1) - \frac{(1.1 - 1)^2}{2} + \frac{(1.1 - 1)^3}{3} = 0.1 - \frac{0.01}{2} + \frac{0.001}{3} 
+	\]
+	som vha lommeregner bestemmes til
+	\[
+	= 0.0953
+	\]
+\end{exercise}
+
+\begin{exercise}{Taylor polynomier 8}
+	
+	Bestem et tredje ordens taylor polynomie for $f(x) = e^{2x} + x^3$
+	omkring $x_0 = 1$.
+	
+	\answerbox{e^2 + 1 + (x-1)^3 \left(\frac{10e^2+ 12}{3} \right)}
+	
+	\hint
+	Et tredje ordens Taylor polynomie for en funktion $f(x)$
+	omkring $x_0$ er givet ved
+	\[
+	f(x_0) + \frac{f'(x_0)}{1!} \cdot (x - x_0) 
+	+ \frac{f''(x_0)}{2!} \cdot (x - x_0)^2 
+	+ \frac{f'''(x_0)}{3!} \cdot (x - x_0)^3 
+	\]
+	
+	
+	\hint
+	Bestem $f(x_0)$
+	\[
+	f(x_0)  = e^{2 \cdot 1} + 1^3 = e^2 + 1
+	\]
+	
+	\hint
+	Bestem $f'(x)$ og $f'(x_0)$
+	\[
+	f'(x) = 2 e^{2x} + 3x^2  \qquad f'(x_0)= 2e^{2 \cdot 1} + 3 \cdot 1^2 = 2e^2 + 3
+	\]
+	
+	\hint
+	Bestem $f''(x)$ og $f''(x_0)$
+	\[
+	f''(x) = 4e^{2x} + 6x \qquad f''(x_0)  = 4e^{2 \cdot 1} + 6 \cdot 1 = 4e^2 + 6
+	\]
+	
+	\hint
+	Bestem $f'''(x)$ og $f'''(x_0)$
+	\[
+	f'''(x) = 8 e^{2x} + 6 \qquad f'''(x_0) =  8e^{2 \cdot 1} + 6 = 8e^2 + 6
+	\]
+	
+	\hint
+	Sæt det hele sammen
+	\[
+	p_3(x) = e^2 + 1 + \frac{2e^2 + 3}{1!} \cdot (x-1) + \frac{4e^2+6}{2!} \cdot (x-1)^2 + \frac{8e^2 + 6}{3!} \cdot (x-1)^3	
+	\]
+	
+	\hint
+	Forenkel udtrykket
+	\begin{align*}
+	p_3(x) &= e^2 + 1 + (2e^2 + 3) \cdot (x-1) + (2e^2+3) \cdot (x-1)^2 + \frac{4e^2 + 3}{3} \cdot (x-1)^3 \\
+			   &= e^2 + 1 + (x-1)^3 \cdot \left(2e^2 + 3 + \frac{4e^2 + 3}{3} \right) \\
+			   &= e^2 + 1 + (x-1)^3 \cdot \left(  \frac{10e^2 + 12}{3} \right) 
+	\end{align*}
+	
+\end{exercise}
+
+\begin{exercise}{Taylor polynomier 9}
+	
+	Bestem et fjerde ordens taylor polynomie for $f(x) = \frac{1}{x}$
+	omkring $x_0 = 2$.
+	
+	\answerbox{\frac{1}{2} - \frac{(x-2)}{4} + \frac{(x-2)^2}{8} - \frac{(x-2)^3}{16} + \frac{(x-2)^4}{32}}
+	
+	\hint
+	Et fjerde ordens Taylor polynomie for en funktion $f(x)$
+	omkring $x_0$ er givet ved
+	\[
+	f(x_0) + \frac{f'(x_0)}{1!} \cdot (x - x_0) 
+	+ \frac{f''(x_0)}{2!} \cdot (x - x_0)^2 
+	+ \frac{f'''(x_0)}{3!} \cdot (x - x_0)^3 
+	+ \frac{f''''(x_0)}{4!} \cdot (x - x_0)^4
+	\]
+	
+	
+	\hint
+	Bestem $f(x_0)$
+	\[
+	f(x_0)  = \frac{1}{2} 
+	\]
+	
+	\hint
+	Bestem $f'(x)$ og $f'(x_0)$
+	\[
+	f'(x) =  \frac{-1}{x^2} \qquad f'(x_0)= \frac{-1}{2^2} = \frac{-1}{4}
+	\]
+	
+	\hint
+	Bestem $f''(x)$ og $f''(x_0)$
+	\[
+	f''(x) = \frac{2}{x^3} \qquad f''(x_0)  = \frac{2}{2^3} = \frac{1}{4}
+	\]
+	
+	\hint
+	Bestem $f'''(x)$ og $f'''(x_0)$
+	\[
+	f'''(x) = \frac{-6}{x^4} \qquad f'''(x_0) =  \frac{-6}{2^4} = \frac{-6}{16} = \frac{-3}{8} 
+	\]
+	
+	\hint
+	Bestem $f''''(x)$ og $f''''(x_0)$
+	\[
+	f''''(x) = \frac{24}{x^5} \qquad f''''(x_0) = \frac{24}{2^5} = \frac{24}{32} = \frac{3}{4}
+	\]
+	
+	\hint
+	Sæt det hele sammen
+	\[
+	p_4(x) = \frac{1}{2} - \frac{(\frac{1}{4})}{1!} \cdot (x-2) + \frac{(\frac{1}{4}) }{2!} \cdot (x-2)^2 - \frac{(\frac{3}{8}) }{3!} \cdot (x-2)^3 + \frac{ (\frac{3}{4}) }{4!} \cdot (x-2)^4 	
+	\]
+	
+	\hint
+	Forenkel udtrykket
+	\[
+	p_4(x) = \frac{1}{2} - \frac{(x-2)}{4} + \frac{(x-2)^2}{8} - \frac{(x-2)^3}{16} + \frac{(x-2)^4}{32}
+	\]
+	
+	
+\end{exercise}
+
+\begin{exercise}{Taylor polynomier 10}
+	
+	Bestem et tredje ordens taylor polynomie for $f(x) = \cos(x) + \sin(x)$
+	omkring $x_0 = \frac{\pi}{2}$.
+	
+	\answerbox{1 - \left(x - \frac{\pi}{2}\right) - \frac{\left(x - \frac{\pi}{2}\right)^2}{2} + \frac{\left(x - \frac{\pi}{2}\right)^3}{6}}
+	
+	\hint
+	Et fjerde ordens Taylor polynomie for en funktion $f(x)$
+	omkring $x_0$ er givet ved
+	\[
+	f(x_0) + \frac{f'(x_0)}{1!} \cdot (x - x_0) 
+	+ \frac{f''(x_0)}{2!} \cdot (x - x_0)^2 
+	+ \frac{f'''(x_0)}{3!} \cdot (x - x_0)^3 
+	\]
+	
+	
+	\hint
+	Bestem $f(x_0)$
+	\[
+	f(x_0)  = \cos\left( \frac{\pi}{2} \right) + \sin\left( \frac{\pi}{2} \right) = 1
+	\]
+	
+	\hint
+	Bestem $f'(x)$ og $f'(x_0)$
+	\[
+	f'(x) = -\sin(x) + \cos(x) \qquad f'(x_0)= -\sin\left( \frac{\pi}{2} \right) + \cos\left( \frac{\pi}{2} \right) = -1
+	\]
+	
+	\hint
+	Bestem $f''(x)$ og $f''(x_0)$
+	\[
+	f''(x) = -\cos(x) - \sin(x) \qquad f''(x_0)  = - \cos\left( \frac{\pi}{2} \right) - \sin\left( \frac{\pi}{2} \right) = -1
+	\]
+	
+	\hint
+	Bestem $f'''(x)$ og $f'''(x_0)$
+	\[
+	f'''(x) = \sin(x) - \cos(x) \qquad f'''(x_0) =  \sin\left( \frac{\pi}{2} \right) - \cos\left( \frac{\pi}{2} \right) = 1
+	\]
+	
+	\hint
+	Sæt det hele sammen
+	\[
+	p_3(x) = 1 - \frac{1}{1!}\cdot \left( x - \frac{\pi}{2} \right) - \frac{1}{2!} \cdot \left( x - \frac{\pi}{2} \right)^2 + \frac{1}{3!}\cdot \left( x - \frac{\pi}{2} \right)^3
+	\]
+	
+	\hint
+	Forenkel udtrykket
+	\[
+	p_3(x) = 1 - \left( x - \frac{\pi}{2} \right) - \frac{\left( x - \frac{\pi}{2} \right)^2}{2} + \frac{\left( x - \frac{\pi}{2} \right)^3}{6}
+	\]
+	
+	
+\end{exercise}
+
+\begin{exercise}{Taylor polynomier 11}
+	
+	Bestem et anden ordens taylor polynomie for $f(x) =x^{1/4}$ 
+	omkring $x_0 = 16$.
+	Benyt taylor polynomiet til at estimere $f(15)$.
+	Angiv resultatet med 4 decimaler i boksen herunder.
+	\answerbox{1.9680}
+	
+	\hint
+	Et anden orden taylor polynomie 
+	er givet ved
+	\[
+	p_2(x) = f(x_0) + \frac{f'(x_0)}{1!} \cdot (x - x_0)
+	+ \frac{f''(x_0)}{2!} \cdot (x - x_0)^2
+	\]
+	
+	
+	\hint
+	Bestem $f(x_0)$
+	\[
+	f(x_0) = 16^{1/4}  = \left(2^4\right)^{1/4} = 2^{4/4} = 2
+	\]
+	
+	\hint
+	Bestem $f'(x)$ og $f'(x_0)$
+	\[
+	f'(x) = \frac{1}{4 \cdot x^{3/4}} \qquad f'(x_0) = \frac{1}{4 \cdot 16^{3/4}} = \frac{1}{4 \cdot 2^3} = \frac{1}{32} 
+	\]
+	
+	\hint
+	Bestem $f''(x)$ og $f''(x_0)$
+	\[
+	f''(x) =\frac{-3}{16 \cdot x^{7/4}}  \quad f''(x_0) = \frac{-3}{16 \cdot 16^{7/4}} = \frac{-3}{16 \cdot 2^7} = \frac{-3}{2048}
+	\]
+	
+	
+	\hint
+	Sæt det hele sammen
+	\[
+	p_2(x) = 2 + \frac{ \left(\frac{1}{32} \right)}{1!} \cdot (x-16) + \frac{ \left( \frac{-3}{2048}\right)}{2!} \cdot (x-16)^2
+	\]
+	
+	\hint
+	Forenkel udtrykket
+	\[
+	p_2(x) = 2 + \frac{(x-16)}{32} - \frac{3(x-16)^2}{4096}
+	\]
+	
+	\hint
+	Estimer $f(15)$ vha. taylor polynomiet, ved at indsætte i $p_2(x)$.
+	Evaluer $p_2(15)$.
+	
+	\hint
+	\[
+	p_2(15) = 2 + \frac{(15-16)}{32} - \frac{3(15-16)^2}{4096} = 2 - \frac{1}{32} + \frac{3}{4096}
+	\]
+	som vha lommeregner bestemmes til
+	\[
+	= 1.9860
+	\]
+\end{exercise}
+
+\begin{exercise}{Taylor polynomier 12}
+	
+	Bestem et fjerde ordens taylor polynomie for $f(x) =\cos(x)$ 
+	omkring $x_0 = 0$.
+	Benyt taylor polynomiet til at estimere $f(0.1)$.
+	Angiv resultatet med 4 decimaler i boksen herunder.
+	\answerbox{0.9950}
+	
+	\hint
+	Et fjerde ordens Taylor polynomie for en funktion $f(x)$
+	omkring $x_0$ er givet ved
+	\[
+	f(x_0) + \frac{f'(x_0)}{1!} \cdot (x - x_0) 
+	+ \frac{f''(x_0)}{2!} \cdot (x - x_0)^2 
+	+ \frac{f'''(x_0)}{3!} \cdot (x - x_0)^3 
+	+ \frac{f''''(x_0)}{4!} \cdot (x - x_0)^4
+	\]
+
+
+	\hint
+	Bestem $f(x_0)$
+	\[
+	f(x_0)  = \cos(0) = 1
+	\]
+
+	\hint
+	Bestem $f'(x)$ og $f'(x_0)$
+	\[
+	f'(x) = -\sin(x) \qquad f'(x_0)= -\sin(0) = 0
+	\]
+	
+	\hint
+	Bestem $f''(x)$ og $f''(x_0)$	
+	\[
+	f''(x) = -\cos(x) \qquad f''(x_0)  = - \cos(0) = -1
+	\]
+
+	\hint
+	Bestem $f'''(x)$ og $f'''(x_0)$
+	\[
+	f'''(x) = \sin(x) \qquad f'''(x_0) =  \sin(0) = 0
+	\]
+	
+	\hint
+	Bestem $f''''(x)$ og $f''''(x_0)$
+	\[
+	f''''(x) = \cos(x) \qquad f''''(x_0) =  \cos(0) = 1
+	\]
+	
+	\hint
+	Sæt det hele sammen
+	\[
+	p_4(x) = 1 + \frac{0}{1!} \cdot (x-0) - \frac{1}{2!} \cdot (x-0)^2 + \frac{0}{3!} \cdot (x-0)^3	+ \frac{1}{4!} \cdot (x-0)^4
+	\]
+	
+	\hint
+	Forenkel udtrykket
+	\[
+	p_4(x) = 1 - \frac{x^2}{2} + \frac{x^4}{24}
+	\]
+	
+	\hint
+	Estimer $f(0.1)$ vha. taylor polynomiet, ved at indsætte i $p_4(x)$.
+	Evaluer $p_4(0.1)$.
+	
+	\hint
+	\[
+	p_4(0.1) =  1 - \frac{0.1^2}{2} + \frac{0.1^4}{24} = 1 - \frac{0.01}{2} + \frac{0.0001}{24}
+	\]
+	som vha lommeregner bestemmes til
+	\[
+	= 0.9950
+	\]
 \end{exercise}
 
 \end{document}
