--- a/01foundations/05exponents/01addexponents.tex
+++ b/01foundations/05exponents/01addexponents.tex
@@ -1,18 +1,11 @@
 \documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage{todonotes}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage[colorlinks, linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
-
-\newenvironment{exercise}[1]{\newpage\section{#1}}{}
-\newcommand{\answerbox}[1]{\fbox{$#1$}}
-\newcommand{\hint}{\subsection*{Hint}}
+\usepackage{tekvideoexercises}
 
 \begin{document}
+
 \tableofcontents
 \newpage
-
+Gange potenser sammen
 \begin{exercise}{Potensregneregler 1-1}
 
 Bestem $a^3 \cdot a^5$.
