Tilføjet kort tekst med navnet på de enkelte opgavetyper.

--- a/03differentiation/01differentiatesimpleexpressions.tex
+++ b/03differentiation/01differentiatesimpleexpressions.tex
@@ -2,6 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
+Differentiering af basisfunktioner
 \tableofcontents
 \newpage
 
@@ -118,7 +119,7 @@ Sæt $n = 6$
 	
 	\hint
 	
-	Differentiering af de periodiske funktioner sinus og cosinus kan gøres ved at "gå med uret rundt" i enhedscirklen.
+	Differentiering af de periodiske funktioner sinus og cosinus kan gøres ved at \emph{gå med uret rundt} i enhedscirklen.
 	
 	\hint 
 	
@@ -139,7 +140,7 @@ Sæt $n = 6$
 
 \hint
 
-Differentiering af de periodiske funktioner sinus og cosinus kan gøres ved at "gå med uret rundt" i enhedscirklen.
+Differentiering af de periodiske funktioner sinus og cosinus kan gøres ved at \emph{gå med uret rundt} i enhedscirklen.
 
 \hint 
 
