--- a/05complexnumbers/05multiplicationpolarform.tex
+++ b/05complexnumbers/05multiplicationpolarform.tex
@@ -10,6 +10,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Multiplikation af komplekse tal på polær form
 \tableofcontents
 \newpage
 
