--- a/05complexnumbers/10imagpolartocartesian.tex
+++ b/05complexnumbers/10imagpolartocartesian.tex
@@ -10,6 +10,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Bestem den imaginære del af et komplekst tal på polær form
 \tableofcontents
 \newpage
 
