--- a/09integration/06partialfractions.tex
+++ b/09integration/06partialfractions.tex
@@ -2,6 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
+Opsplitte en brøk i partial brøker
 \tableofcontents
 
 \begin{exercise}{Opsplitning i partialbrøker 1-1}
