--- a/11differentialequations/05secondorderhomogeneusdiffequationgeneral.tex
+++ b/11differentialequations/05secondorderhomogeneusdiffequationgeneral.tex
@@ -10,6 +10,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Løs en homogen anden ordens lineær differentialligning
 \tableofcontents
 \newpage
 
