--- a/05complexnumbers/01additioncartesianform.tex
+++ b/05complexnumbers/01additioncartesianform.tex
@@ -10,6 +10,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Addition af komplekse tal på kartesisk form
 \tableofcontents
 \newpage
 
