--- a/05complexnumbers/02subtractioncartesianform.tex
+++ b/05complexnumbers/02subtractioncartesianform.tex
@@ -10,6 +10,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Subtraktion af komplekse tal på kartesisk form
 \tableofcontents
 \newpage
 
