--- a/05complexnumbers/03multiplicationcartesianform.tex
+++ b/05complexnumbers/03multiplicationcartesianform.tex
@@ -10,6 +10,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Multiplikation af komplekse tal på kartesisk form
 \tableofcontents
 \newpage
 
