--- a/05complexnumbers/04divisioncartesianform.tex
+++ b/05complexnumbers/04divisioncartesianform.tex
@@ -10,6 +10,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Division af komplekse tal på kartesisk form
 \tableofcontents
 \newpage
 
