--- a/05complexnumbers/07moduluscartesiantopolar.tex
+++ b/05complexnumbers/07moduluscartesiantopolar.tex
@@ -10,6 +10,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Bestem modulus af komplekse tal på kartesisk form
 \tableofcontents
 \newpage
 
