--- a/11differentialequations/04firstorderlineardiffequation.tex
+++ b/11differentialequations/04firstorderlineardiffequation.tex
@@ -13,6 +13,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Løs en første ordens lineær differentialligning
 \tableofcontents
 \newpage
 
