--- a/11differentialequations/06secondorderhomogeneusdiffequationparticular.tex
+++ b/11differentialequations/06secondorderhomogeneusdiffequationparticular.tex
@@ -10,6 +10,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
+Anvend startbetingelser på en anden ordens differentialligning
 \tableofcontents
 \newpage
 
