Ret et problem med opgave parseren, der ikke kan håndtere to answerbox'e på en linje

--- a/11differentialequations/06secondorderhomogeneusdiffequationparticular.tex
+++ b/11differentialequations/06secondorderhomogeneusdiffequationparticular.tex
@@ -27,7 +27,8 @@ y(t) = A \cdot e^{-t} + B \cdot t \cdot e^{-t}
 Bestem konstanterne $A$ og $B$ givet startbetingelserne $y(0)=5$ og $y'(0)=3$.
 
 
-$A$ = \answerbox{5}		$B$ = \answerbox{8}
+$A$ = \answerbox{5}		
+$B$ = \answerbox{8}
 
 \hint
 
@@ -107,7 +108,8 @@ Det giver
 	Bestem konstanterne $A$ og $B$ givet startbetingelserne $y(0)=2$ og $y'(0)=4$.
 	
 	
-	$A$ = \answerbox{2}		$B$ = \answerbox{0}
+	$A$ = \answerbox{2}		
+$B$ = \answerbox{0}
 	
 	\hint
 	
@@ -183,7 +185,8 @@ y(t) = A \cdot e^{-2t} + B \cdot t \cdot e^{-2t}
 Bestem konstanterne $A$ og $B$ givet startbetingelserne $y(0)=4$ og $y'(0)=2$.
 
 
-$A$ = \answerbox{4}		$B$ = \answerbox{10}
+$A$ = \answerbox{4}		
+$B$ = \answerbox{10}
 
 \hint
 
@@ -259,7 +262,8 @@ Det giver
 	Bestem konstanterne $A$ og $B$ givet startbetingelserne $y(0)=2$ og $y'(0)=3$.
 	
 	
-	$A$ = \answerbox{-1}		$B$ = \answerbox{3}
+	$A$ = \answerbox{-1}		
+$B$ = \answerbox{3}
 	
 	\hint
 	
@@ -347,7 +351,8 @@ Det giver
 	Bestem konstanterne $A$ og $B$ givet startbetingelserne $y(0)=4$ og $y'(0)=-12$.
 	
 	
-	$A$ = \answerbox{-2}		$B$ = \answerbox{6}
+	$A$ = \answerbox{-2}		
+$B$ = \answerbox{6}
 	
 	\hint
 	
@@ -436,7 +441,8 @@ Det giver
 	Bestem konstanterne $A$ og $B$ givet startbetingelserne $y(0)=2$ og $y'(0)=4$.
 	
 	
-	$A$ = \answerbox{-1}		$B$ = \answerbox{3}
+	$A$ = \answerbox{-1}		
+$B$ = \answerbox{3}
 	
 	\hint
 	
@@ -524,7 +530,8 @@ Det giver
 	Bestem konstanterne $A$ og $B$ givet startbetingelserne $y(0)=2$ og $y'(0)=0$.
 	
 	
-	$A$ = \answerbox{2}		$B$ = \answerbox{2}
+	$A$ = \answerbox{2}		
+$B$ = \answerbox{2}
 	
 	\hint
 	
@@ -614,7 +621,8 @@ Det giver
 	Bestem konstanterne $A$ og $B$ givet startbetingelserne $y(0)=5$ og $y'(0)=2$.
 	
 	
-	$A$ = \answerbox{5}		$B$ = \answerbox{-1}
+	$A$ = \answerbox{5}		
+$B$ = \answerbox{-1}
 	
 	\hint
 	
@@ -704,7 +712,8 @@ Det giver
 	Bestem konstanterne $A$ og $B$ givet startbetingelserne $y(0)=8$ og $y'(0)=3$.
 	
 	
-	$A$ = \answerbox{8}		$B$ = \answerbox{-13}
+	$A$ = \answerbox{8}		
+$B$ = \answerbox{-13}
 	
 	\hint
 	
