Add markup of exercisenames and support for including them in the generated tree overview

--- a/01foundations/01fractions/01simplicification.tex
+++ b/01foundations/01fractions/01simplicification.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Forenkling af udtryk med brøker.
+\exercisename{Forenkling af udtryk med brøker.}
 
 \tableofcontents
 \newpage
