General cleanup of exercise files.

--- a/01foundations/01fractions/01simplicification.tex
+++ b/01foundations/01fractions/01simplicification.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-\exercisename{Forenkling af udtryk med brøker.}
+\exercisename{Forenkling af udtryk med brøker}
 
 \tableofcontents
 \newpage
@@ -41,14 +41,14 @@ Reducer udtryk
 	
 	Omskriv udtryk
 	\[
-	\frac{2 \cdot 4}{3 \cdot 6}  = \frac{2 \cdot 4}{3 \cdot 3 \cdot 2} 
+	\frac{2 \cdot 4}{3 \cdot 6}  = \frac{2 \cdot 4}{3 \cdot 3 \cdot 2} 
 	\]
 	
 	\hint
 	
 	Reducer udtryk.
 	\[
-	\frac{2 \cdot 4}{3 \cdot 3 \cdot 2}  = \frac{2 \cdot 4}{2 \cdot 9} = \frac{4}{9}
+	\frac{2 \cdot 4}{3 \cdot 3 \cdot 2}  = \frac{2 \cdot 4}{2 \cdot 9} = \frac{4}{9}
 	\]
 	
 \end{exercise}
