--- a/01foundations/01fractions/02addition.tex
+++ b/01foundations/01fractions/02addition.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Addition af brøker.
+\exercisename{Addition af brøker}
 
 	\tableofcontents
 	\newpage
