--- a/01foundations/01fractions/03subtraction.tex
+++ b/01foundations/01fractions/03subtraction.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Subtraktion af brøker
+\exercisename{Subtraktion af brøker}
 	\tableofcontents
 	\newpage
 	
