--- a/01foundations/01fractions/04multiplication.tex
+++ b/01foundations/01fractions/04multiplication.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Multiplikation af brøker
+\exercisename{Multiplikation af brøker}
 
 \tableofcontents
 \newpage
