--- a/01foundations/01fractions/05division.tex
+++ b/01foundations/01fractions/05division.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Division af brøker
+\exercisename{Division af brøker}
 \tableofcontents
 \newpage
 
