--- a/01foundations/03polynomials/01multiplyparenteses.tex
+++ b/01foundations/03polynomials/01multiplyparenteses.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Gange parenteser sammen
+\exercisename{Gange parenteser sammen}
 \tableofcontents
 \newpage
 
