--- a/01foundations/05exponents/01addexponents.tex
+++ b/01foundations/05exponents/01addexponents.tex
@@ -2,10 +2,10 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-
+\exercisename{Gange potenser sammen}
 \tableofcontents
 \newpage
-Gange potenser sammen
+
 \begin{exercise}{Potensregneregler 1-1}
 
 Bestem $a^3 \cdot a^5$.
