--- a/03differentiation/01differentiatesimpleexpressions.tex
+++ b/03differentiation/01differentiatesimpleexpressions.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Differentiering af basisfunktioner
+\exercisename{Differentiering af basisfunktioner}
 \tableofcontents
 \newpage
 
