--- a/03differentiation/04differentiatecompoundexpressions.tex
+++ b/03differentiation/04differentiatecompoundexpressions.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Differentier sammensatte funktioner
+\exercisename{Differentier sammensatte funktioner}
 \tableofcontents
 \newpage
 
