--- a/03differentiation/06taylorpolynomials.tex
+++ b/03differentiation/06taylorpolynomials.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Taylor polynomier
+\exercisename{Taylor polynomier}
 \tableofcontents
 \newpage
 
