--- a/05complexnumbers/09realpolartocartesian.tex
+++ b/05complexnumbers/09realpolartocartesian.tex
@@ -1,16 +1,8 @@
 \documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage{todonotes}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage[colorlinks, linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
-
-\newenvironment{exercise}[1]{\newpage\section{#1}}{}
-\newcommand{\answerbox}[1]{\fbox{$#1$}}
-\newcommand{\hint}{\subsection*{Hint}}
+\usepackage{tekvideoexercises}
 
 \begin{document}
-Bestem den reelle del af et komplekst tal på polær form
+\exercisename{Bestem den reelle del af et komplekst tal på polær form}
 \tableofcontents
 \newpage
 
