--- a/07linearalgebra/02matrixmultiplication.tex
+++ b/07linearalgebra/02matrixmultiplication.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Matrix multiplikation
+\exercisename{Matrix multiplikation}
 \tableofcontents
 \newpage
 
