--- a/07linearalgebra/03gausselimination.tex
+++ b/07linearalgebra/03gausselimination.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Gauss elimination
+\exercisename{Gauss elimination}
 \tableofcontents
 \newpage
 
