--- a/07linearalgebra/08eigenvalues.tex
+++ b/07linearalgebra/08eigenvalues.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Bestem egenværdier af en 3x3 matrice
+\exercisename{Bestem egenværdier af en 3x3 matrice}
 \tableofcontents
 \newpage
 
