--- a/09integration/01integrationofsimpleexpressions.tex
+++ b/09integration/01integrationofsimpleexpressions.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Integration af basis funktioner
+\exercisename{Integration af basis funktioner}
 \tableofcontents
 
 \begin{exercise}{Integration af basis funktioner 1-1}
