--- a/09integration/03integrationusingsubstitution.tex
+++ b/09integration/03integrationusingsubstitution.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Integration vha. substitution
+\exercisename{Integration vha. substitution}
 \tableofcontents
 
 
