--- a/09integration/05integrationbypartswithlimits.tex
+++ b/09integration/05integrationbypartswithlimits.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Partiel integration og indsættelse af grænser
+\exercisename{Partiel integration og indsættelse af grænser}
 \tableofcontents
 
 \newpage
