--- a/11differentialequations/01diffequationtrueorfalse.tex
+++ b/11differentialequations/01diffequationtrueorfalse.tex
@@ -1,13 +1,8 @@
 \documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage{todonotes}
-\usepackage{graphicx}
-\usepackage{amsmath}
 \usepackage{tekvideoexercises}
 
-
 \begin{document}
-Se om en funktion løser en given differentialligning
+\exercisename{Se om en funktion løser en given differentialligning}
 \tableofcontents
 \newpage
 
