--- a/01foundations/05exponents/04exponentsandfractions.tex
+++ b/01foundations/05exponents/04exponentsandfractions.tex
@@ -1,16 +1,8 @@
 \documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage{todonotes}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage[colorlinks, linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
-
-\newenvironment{exercise}[1]{\newpage\section{#1}}{}
-\newcommand{\answerbox}[1]{\fbox{$#1$}}
-\newcommand{\hint}{\subsection*{Hint}}
+\usepackage{tekvideoexercises}
 
 \begin{document}
-Eksponenter i brøker
+\exercisename{Eksponenter i brøker}
 \tableofcontents
 \newpage
 
