--- a/09integration/02integrationwithlimits.tex
+++ b/09integration/02integrationwithlimits.tex
@@ -2,7 +2,7 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Bestem værdien af bestemte integraler
+\exercisename{Bestem værdien af bestemte integraler}
 \tableofcontents
 
 \begin{exercise}{Bestemte integraler 1-1}
