--- a/01foundations/03polynomials/tekvideoexercises.sty
+++ b/01foundations/03polynomials/tekvideoexercises.sty
@@ -1,29 +1,1 @@
-\usepackage[utf8]{inputenc}
-\usepackage{todonotes}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{fancyhdr}
-\usepackage[abspath]{currfile}
-\usepackage[colorlinks, linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
-
-\pagestyle{fancy}
-\lhead{\currfilepath}
-\rhead{}
-\cfoot{}
-
-
-\newenvironment{exercise}[1]{\newpage\section{#1}}{}
-
-\newcommand{\answerbox}[1]{\fbox{$#1$}}
-
-\newenvironment{multichoice}[1][]{\par\noindent{}Parametre: #1\begin{itemize}}{\end{itemize}}
-\newcommand{\itemtrue}{\item (true) }
-\newcommand{\itemfalse}{\item (false) }
-
-\newenvironment{answermatrix}{\(\begin{pmatrix}}{\end{pmatrix}\)}
-
-
-\newcommand{\hint}{\subsection*{Hint}}
-\newcommand{\exercisename}[1]{\noindent #1}
-
-
+../../unplaced/tekvideoexercises.sty
