Added markup for when to use the pocket calculator.

--- a/03differentiation/06taylorpolynomials.tex
+++ b/03differentiation/06taylorpolynomials.tex
@@ -580,6 +580,8 @@ p_2(1.1) = 4 + 9 \cdot \left(1.1 - 1\right) + 6 \cdot \left(1.1 - 1\right)^2
 	Benyt taylor polynomiet til at estimere $f(15)$.
 	Angiv resultatet med 4 decimaler i boksen herunder.
 	\answerbox{1.9680}
+
+\lommeregnertilladt
 	
 	\hint
 	Et anden orden taylor polynomie 
