--- a/01foundations/01fractions/02addition.tex
+++ b/01foundations/01fractions/02addition.tex
@@ -42,7 +42,7 @@
 		
 		Bestem $\frac{5}{6}+\frac{7}{8}$ og reducér udtrykket.
 		
-		\answerbox{\frac{41}{24}}
+		\answerbox{\frac{25}{16}}
 		
 		\hint
 		
@@ -55,14 +55,14 @@
 		
 		Sæt på fælles brøkstreg
 		\[
-		\frac{5 \cdot 8 }{6 \cdot 8}+\frac{7 \cdot 5}{8\cdot 6}  = \frac{40+42}{48} 
+		\frac{5 \cdot 8 }{6 \cdot 8}+\frac{7 \cdot 5}{8\cdot 6}  = \frac{40+35}{48} 
 		\]
 		
 		\hint
 		
 		Reducér brøk
 		\[
-		\frac{82}{48} = \frac{41}{24}
+		\frac{75}{48} = \frac{3 \cdot 25}{3 \cdot 16} = \frac{25}{16}
 		\]
 		
 	\end{exercise}
