Removed spurious newlines.

--- a/09integration/01integrationofsimpleexpressions.tex
+++ b/09integration/01integrationofsimpleexpressions.tex
@@ -13,7 +13,7 @@ I = \int x^2 dx
 \]
 og kald den ukendte konstant for $K$.
 
-$I$ = \answerbox{\frac{1}{3} x^3 + K} \\
+$I$ = \answerbox{\frac{1}{3} x^3 + K} 
 
 \hint
 At integrere er det modsatte af at differentiere.
@@ -44,7 +44,7 @@ I = \int x dx
 \]
 og kald den ukendte konstant for $K$.
 
-$I$ = \answerbox{\frac{1}{2} x^2 + K} \\
+$I$ = \answerbox{\frac{1}{2} x^2 + K} 
 
 \hint
 At integrere er det modsatte af at differentiere.
@@ -75,7 +75,7 @@ I = \int x^4 dx
 \]
 og kald den ukendte konstant for $K$.
 
-$I$ = \answerbox{\frac{1}{5} x^5 + K} \\
+$I$ = \answerbox{\frac{1}{5} x^5 + K} 
 
 \hint
 At integrere er det modsatte af at differentiere.
@@ -106,7 +106,7 @@ I = \int \sin(x) dx
 \]
 og kald den ukendte konstant for $K$.
 
-$I$ = \answerbox{-\cos(x) + K} \\
+$I$ = \answerbox{-\cos(x) + K} 
 
 \hint
 At integrere er det modsatte af at differentiere.
@@ -140,7 +140,7 @@ I = \int \cos(x) dx
 \]
 og kald den ukendte konstant for $K$.
 
-$I$ = \answerbox{\sin(x) + K} \\
+$I$ = \answerbox{\sin(x) + K} 
 
 \hint
 At integrere er det modsatte af at differentiere.
@@ -174,7 +174,7 @@ I = \int e^x dx
 \]
 og kald den ukendte konstant for $K$.
 
-$I$ = \answerbox{e^x + K} \\
+$I$ = \answerbox{e^x + K} 
 
 \hint
 At integrere er det modsatte af at differentiere.
@@ -207,7 +207,7 @@ I = \int \frac{1}{x} dx
 \]
 og kald den ukendte konstant for $K$.
 
-$I$ = \answerbox{\ln(x) + K} \\
+$I$ = \answerbox{\ln(x) + K} 
 
 \hint
 At integrere er det modsatte af at differentiere.
