--- a/09integration/03integrationusingsubstitution.tex
+++ b/09integration/03integrationusingsubstitution.tex
@@ -15,7 +15,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{\frac{1}{2} e^{x^2} + A} \\
+	\answerbox{\frac{1}{2} e^{x^2} + A} 
 	
 	
 	
@@ -89,7 +89,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{- \frac{1}{3} \cos(x^3) + A} \\
+	\answerbox{- \frac{1}{3} \cos(x^3) + A} 
 	
 	
 	
@@ -163,7 +163,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{e^{\sin(x)} + A} \\
+	\answerbox{e^{\sin(x)} + A} 
 	
 	
 	
@@ -228,7 +228,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{\frac{1}{2} e^{x^2+1} + A} \\
+	\answerbox{\frac{1}{2} e^{x^2+1} + A} 
 	
 	
 	
@@ -302,7 +302,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{\frac{-1}{3} \cos(3x^2+2) + A} \\
+	\answerbox{\frac{-1}{3} \cos(3x^2+2) + A} 
 	
 	
 	
@@ -376,7 +376,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{\frac{1}{2} \ln(x^2+1) + A} \\
+	\answerbox{\frac{1}{2} \ln(x^2+1) + A} 
 	
 	
 	
@@ -450,7 +450,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{\ln(\sin(x)+1) + A} \\
+	\answerbox{\ln(\sin(x)+1) + A} 
 	
 	
 	
@@ -516,7 +516,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{ \frac{1}{4} \sin(2x^2) + A} \\
+	\answerbox{ \frac{1}{4} \sin(2x^2) + A} 
 	
 	
 	
