--- a/09integration/02integrationwithlimits.tex
+++ b/09integration/02integrationwithlimits.tex
@@ -12,7 +12,7 @@ Bestem værdien af det bestemte integrale
 I = \int_0^1 x^2 \, dx
 \]
 
-$I$ = \answerbox{\frac{1}{3}} \\
+$I$ = \answerbox{\frac{1}{3}} 
 
 
 \hint
@@ -60,7 +60,7 @@ I = \left( \frac{1}{3} \cdot 1^3 + K \right) - \left( \frac{1}{3} \cdot 0^3 + K 
 	I = \int_1^2 x \, dx
 	\]
 	
-	$I$ = \answerbox{\frac{3}{2}} \\
+	$I$ = \answerbox{\frac{3}{2}} 
 	
 	
 	\hint
@@ -108,7 +108,7 @@ I = \left( \frac{1}{3} \cdot 1^3 + K \right) - \left( \frac{1}{3} \cdot 0^3 + K 
 	I = \int_0^1 x^4 \, dx
 	\]
 	
-	$I$ = \answerbox{\frac{1}{5}} \\
+	$I$ = \answerbox{\frac{1}{5}} 
 	
 	
 	\hint
@@ -156,7 +156,7 @@ I = \left( \frac{1}{3} \cdot 1^3 + K \right) - \left( \frac{1}{3} \cdot 0^3 + K 
 	I = \int_0^{\pi} \sin(x) \, dx
 	\]
 	
-	$I$ = \answerbox{2} \\
+	$I$ = \answerbox{2} 
 	
 	
 	\hint
@@ -205,7 +205,7 @@ I = \left( \frac{1}{3} \cdot 1^3 + K \right) - \left( \frac{1}{3} \cdot 0^3 + K 
 	I = \int_0^{\frac{\pi}{2}} \cos(x) \, dx
 	\]
 	
-	$I$ = \answerbox{1} \\
+	$I$ = \answerbox{1} 
 	
 	
 	\hint
@@ -255,7 +255,7 @@ I = \left( \frac{1}{3} \cdot 1^3 + K \right) - \left( \frac{1}{3} \cdot 0^3 + K 
 	I = \int_0^1 e^x \, dx
 	\]
 	
-	$I$ = \answerbox{e-1} \\
+	$I$ = \answerbox{e-1} 
 	
 	
 	\hint
@@ -303,7 +303,7 @@ I = \left( \frac{1}{3} \cdot 1^3 + K \right) - \left( \frac{1}{3} \cdot 0^3 + K 
 	I = \int_0^2 x^2+1 \, dx
 	\]
 	
-	$I$ = \answerbox{\frac{14}{3}} \\
+	$I$ = \answerbox{\frac{14}{3}} 
 	
 	
 	\hint
@@ -374,7 +374,7 @@ I = \left( \frac{1}{3} \cdot 1^3 + K \right) - \left( \frac{1}{3} \cdot 0^3 + K 
 	I = \int_0^2 2x^3 \, dx
 	\]
 	
-	$I$ = \answerbox{8} \\
+	$I$ = \answerbox{8} 
 	
 	
 	\hint
