--- a/09integration/03integrationusingsubstitutionwithlimits.tex
+++ b/09integration/03integrationusingsubstitutionwithlimits.tex
@@ -13,7 +13,7 @@
 	M = \int_0^2 e^{(x^2)} \cdot x \, dx
 	\]
 	
-	$M$ = \answerbox{\frac{1}{2}e^4-\frac{1}{2}} \\
+	$M$ = \answerbox{\frac{1}{2}e^4-\frac{1}{2}} 
 	
 	
 	
@@ -79,7 +79,7 @@
 	M =	\int_{0}^{\sqrt{\pi}} \sin(x^2) \cdot x \, dx
 	\]
 	
-	$M$ =\answerbox{1} \\
+	$M$ =\answerbox{1} 
 	
 	
 	
@@ -142,7 +142,7 @@
 	M = \int_0^{\frac{\pi}{2}} e^{\sin(x)} \cdot cos(x) \, dx
 	\]
 
-	$M$ = \answerbox{e-1} \\
+	$M$ = \answerbox{e-1} 
 	
 	
 	
@@ -207,7 +207,7 @@
 	\]
 
 	
-	$M$ = \answerbox{\frac{1}{2} e^5 - \frac{1}{2} e^2} \\
+	$M$ = \answerbox{\frac{1}{2} e^5 - \frac{1}{2} e^2} 
 	
 	
 	
@@ -269,7 +269,7 @@
 	M = \int_0^2 \sin(3x^2+2) \cdot 2x \, dx
 	\]
 	
-	$M$ = \answerbox{- \frac{1}{3} \cos(14) + \frac{1}{3} \cos(2)} \\
+	$M$ = \answerbox{- \frac{1}{3} \cos(14) + \frac{1}{3} \cos(2)} 
 	
 	
 	
@@ -332,7 +332,7 @@
 	M = \int_0^1 (x+3)^3 \, dx
 	\]
 	
-	$M$ = \answerbox{\frac{175}{4}} \\
+	$M$ = \answerbox{\frac{175}{4}} 
 	
 	
 	
@@ -395,7 +395,7 @@
 	M = \int_0^{\frac{\pi}{2}} cos(1-x) \, dx
 	\]
 	
-	$M$ = \answerbox{\cos(1)+\sin(1)} \\
+	$M$ = \answerbox{\cos(1)+\sin(1)} 
 	
 	
 	
@@ -460,7 +460,7 @@
 	M = \int_0^{\sqrt{\frac{\pi}{4}}} \cos(2x^2) \cdot x \, dx
 	\]
 	
-	$M$ = \answerbox{\frac{1}{4}} \\
+	$M$ = \answerbox{\frac{1}{4}} 
 	
 	
 	
