--- a/09integration/04integrationbyparts.tex
+++ b/09integration/04integrationbyparts.tex
@@ -16,7 +16,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{e^x(x - 1)  + A} \\
+	\answerbox{e^x(x - 1)  + A} 
 	
 	
 	\hint
@@ -95,7 +95,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{-x^2 \cdot \cos(x) + 2x \cdot \sin(x) - 2\cos(x) + A} \\
+	\answerbox{-x^2 \cdot \cos(x) + 2x \cdot \sin(x) - 2\cos(x) + A} 
 	
 	
 	\hint
@@ -198,7 +198,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{\frac{2x^2 \cdot \sin(2x)+2x\cdot \cos(2x) -  \sin(2x)}{4} +  A} \\
+	\answerbox{\frac{2x^2 \cdot \sin(2x)+2x\cdot \cos(2x) -  \sin(2x)}{4} +  A} 
 	
 	
 	\hint
@@ -302,7 +302,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{2x \cdot \sin(x) + 2 \cos(x) + A} \\
+	\answerbox{2x \cdot \sin(x) + 2 \cos(x) + A} 
 	
 	
 	\hint
@@ -381,7 +381,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{-x \cdot \cos(x) + \sin(x) + A} \\
+	\answerbox{-x \cdot \cos(x) + \sin(x) + A} 
 	
 	
 	\hint
@@ -461,7 +461,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{ \frac{3\ln(x) \cdot x^3 - x^3}{9}  + A} \\
+	\answerbox{ \frac{3\ln(x) \cdot x^3 - x^3}{9}  + A} 
 	
 	
 	\hint
@@ -541,7 +541,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{x^2 \left( \frac{\ln(x)}{2} - \frac{1}{4}   \right) + A} \\
+	\answerbox{x^2 \left( \frac{\ln(x)}{2} - \frac{1}{4}   \right) + A} 
 	
 	
 	\hint
@@ -621,7 +621,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{e^{2x} \cdot \left( \frac{2x^2-2x+1}{4}  \right) + A} \\
+	\answerbox{e^{2x} \cdot \left( \frac{2x^2-2x+1}{4}  \right) + A} 
 	
 	
 	\hint
