Changed markup a bit.

--- a/11differentialequations/02separablediffequationgeneral.tex
+++ b/11differentialequations/02separablediffequationgeneral.tex
@@ -15,7 +15,7 @@ Find den generelle løsning til differentialligningen
 \]
 Kald den ukendte konstant for A.
 
-$\textrm{Generel løsning } y(x)$ = \answerbox{\frac{1}{2}x^2 + A}
+Generel løsning: $y(x)$ = \answerbox{\frac{1}{2}x^2 + A}
 
 \hint
 
@@ -69,7 +69,7 @@ hvor $A=K_2-K_1$
 	\]
 	Se på tilfældet hvor $y$ er positivt og kald den ukendte konstant for A.
 	
-	$\textrm{Generel løsning } y(x)$ = \answerbox{\sqrt{x^2 + A}}
+	Generel løsning: $y(x)$ = \answerbox{\sqrt{x^2 + A}}
 	
 	\hint
 	
@@ -141,7 +141,7 @@ hvor $A=K_2-K_1$
 	\]
 	Kald den ukendte konstant for A.
 	
-	$\textrm{Generel løsning } y(x)$ = \answerbox{- \cos(x) + A}
+	Generel løsning: $y(x)$ = \answerbox{- \cos(x) + A}
 	
 	\hint
 	
@@ -194,7 +194,7 @@ hvor $A=K_2-K_1$
 	\]
 	Kald den ukendte konstant for A.
 	
-	$\textrm{Generel løsning } y(x)$ = \answerbox{A \cdot e^{5x}}
+	Generel løsning: $y(x)$ = \answerbox{A \cdot e^{5x}}
 	
 	\hint
 	
@@ -274,7 +274,7 @@ hvor $A=K_2-K_1$
 	\]
 	Kald den ukendte konstant for A.
 	
-	$\textrm{Generel løsning } y(x)$ = \answerbox{A \cdot \sqrt{x}}
+	Generel løsning: $y(x)$ = \answerbox{A \cdot \sqrt{x}}
 	
 	\hint
 	
